Comments to liz added. No words changed! Few small typos edited.

--- a/gREM_ms_19062014_EMKJ.tex
+++ b/gREM_ms_19062014_EMKJ.tex
@@ -118,7 +118,10 @@ In this study we create a generalised REM (gREM), as an extension to the camera 
 
 \subsection{Analytical Model}
 
-Our derivations follow the REM presented by \citep{rowcliffe2008estimating} which adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi$ radians and detection distance $r$ (Appendix S1} for a list of symbols), giving a circular sector within which animals can be captures (detection zone)(Figure~\ref{}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$. We derive models for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$, starting with the simplest model, the gas model (where \theta =  2\pi$ and $ \alpha =  2\pi$). 
+% @liz just checking you know there's two empty \ref{}s. One here and one somewhere else.
+% @liz rowcliffe implies the derivation is theta < pi (but isn't totally explicit). In actual fact it is theta < pi/2, but marcus wasn't aware of that.
+
+Our derivations follow the REM presented by \citep{rowcliffe2008estimating} which adapts the gas model to model count data from camera trap surveys. The REM is derived assuming a stationary sensor with a detection width $\theta$ less than $\pi$ radians and detection distance $r$ (Appendix S1 for a list of symbols), giving a circular sector within which animals can be captured (detection zone)(Figure~\ref{}). However, in order to apply this approach more generally, and in particular to acoustic detectors, we need both to relax the constraint on sensor detection width, and allow for animals with directional signals. We therefore model the animal as having an associated signal width $\alpha$. We derive models for any detection width, $ \theta$, between 0 and $2\pi$ and any signal width, $ \alpha$, between 0 and $2\pi$, starting with the simplest model, the gas model (where $\theta =  2\pi$ and $ \alpha =  2\pi$). 
 
 %move to appendix
 \begin{table}[t]
@@ -146,18 +149,20 @@ $d$ 		& Time step index &
 
 \subsubsection{Gas Model}
 
+% @liz we should probably cite yapp1956theory here to make it clear that this isn't the first time this has been derived.
 Here we derive the gas model where sensors can capture animals in any direction and animals give out signals in all directions ($ \theta =  2\pi$ and $ \alpha =  2\pi$). We assume that animals are in a homogeneous environment, and move in straight lines of random direction with velocity $v$. We allow that our stationary sensor can capture animals at a detection distance $r$ and that if an animal moves within this detection zone they are captured with a probability of one, while animals outside the region are never captured.
 
 %%% Put in new diagram.
 
+% @liz It's not for computational simplicity and it's needed for this model as well as later models. For the sensor to 'sweep' out an area, it needs to move. But as we're using a stationary sensor, it can only sweep out an area in terms of relative velocity.
 For computational simplicity in later models, we then consider relative velocity from the reference frame of the animals. Conceptually, this requires us to imagine that all animals are stationary and randomly distributed in space, while the sensor moves with velocity $v$. If we calculate the area covered by the sensor during the survey period we can estimate the number of animals it should capture. As a circle moving across a plane, the area covered by the sensor per unit time is $2rv$. The number of expected captures, $z$, for a survey period of $t$, with an animal density of $D$ is $z = 2rvtD$. To estimate the density, we rearrange to get $D = z/2rvt$.
 
 \subsubsection{Discontinuity in detector and signal width combinations}
-Although $\theta$ and $\alpha$ vary continuously, we find that there are many discontinuities in the derivation of the model depending on their combination. For different values of $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a diameter (the profile $p$) that changes with approach angle of the sensor and the animal. Thus p is the value of the diameter of the sensor averaged across all possible approach angles. However, there is not one equation to calculate p for every combination of $\theta$ and $\alpha$. Instead, different areas of parameter space have different equations to calcuate profiles. Therefore we have identified the combinations of $\theta$ and $\alpha$ for which the equation is the same, and derive $p$ for each combination (Figure~\ref{}). We have derive one model SE2 as an example (where 4 $\pi$ - 2 $\alpha$ < $\theta$ < 2$\pi$ , 0 < $\alpha$ <$\pi$) and the remaining derivations are included in Appendix S2.
+Although $\theta$ and $\alpha$ vary continuously, we find that there are many discontinuities in the derivation of the model depending on their combination. For different values of $\theta$ and $\alpha$, the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a diameter (the profile $p$) that changes with approach angle of the sensor and the animal. Thus $p$ is the value of the diameter of the sensor averaged across all possible approach angles. However, there is not one equation to calculate $p$ for every combination of $\theta$ and $\alpha$. Instead, different areas of parameter space have different equations to calcuate profiles. Therefore we have identified the combinations of $\theta$ and $\alpha$ for which the equation is the same, and derive $p$ for each combination (Figure~\ref{}). We have derive one model SE2 as an example (where $4 \pi - 2 \alpha < \theta < 2\pi ,\; 0 < \alpha <\pi$) and the remaining derivations are included in Appendix S2.
 
 % No further changes after this point!!!
 % think about how to put the below in
-Many of these models have the same functional form, and are therefore grouped together as can be seen in figure \ref{f:equalModelResults}, all of the sub models can be seen in Figure 1 in Appendix S1. The upper right  corner of figure \ref{f:equalModelResults} being the gas model as derived above and `REM' is the model from \citep{rowcliffe2008estimating}. 
+Many of these models have the same functional form, and are therefore grouped together as can be seen in Figure \ref{f:equalModelResults}, all of the sub models can be seen in Figure 1 in Appendix S1. The upper right  corner of Figure \ref{f:equalModelResults} being the gas model as derived above and `REM' is the model from \citep{rowcliffe2008estimating}. 
 
 When the detection angle is smaller than $\pi$ we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. In practice, as the models are all left/right symmetrical we can integrate across $\pi$ angles of approach and divide by $\pi$.
 
