--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-06-18 15:41:19 +0100 
+%% Created for Elizabeth Moorcroft at 2014-06-23 13:16:10 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{blumstein2011acoustic,
+	Author = {Blumstein, Daniel T and Mennill, Daniel J and Clemins, Patrick and Girod, Lewis and Yao, Kung and Patricelli, Gail and Deppe, Jill L and Krakauer, Alan H and Clark, Christopher and Cortopassi, Kathryn A and others},
+	Date-Added = {2014-06-23 12:16:07 +0000},
+	Date-Modified = {2014-06-23 12:16:07 +0000},
+	Journal = {Journal of Applied Ecology},
+	Number = {3},
+	Pages = {758--767},
+	Publisher = {Wiley Online Library},
+	Title = {Acoustic monitoring in terrestrial environments using microphone arrays: applications, technological considerations and prospectus},
+	Volume = {48},
+	Year = {2011}}
 
 @article{purvis2000predicting,
 	Author = {Purvis, Andy and Gittleman, John L and Cowlishaw, Guy and Mace, Georgina M},
