Updates on intro

--- a/Introduction - rewrite.tex
+++ b/Introduction - rewrite.tex
@@ -26,13 +26,17 @@ Any camera looking down on a terrestrial landscape or in a marine environment wo
 
 
 %acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
+There has been a sharp rise in the number of publications with passive acoustic detectors, with fewer than 10 studies published in 2000, and more than 60 published in 2010, a more than 6 fold increase in a decade \citep{kessel2014review}. 
+
+Different families and species of animals will display different directionality in their calls, there will even be different widths of call from the same animal depending on that calls purpose \citep{jakobsen2012convergent}
+
 
 %Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
 Acoustic monitoring is being developed for study the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, as well as the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}
 
 
 %Another limitation to using these sensors is lack of guidelines on how survey effort impacts the accuracy and precision of estimates (guidelines would be useful. practically can only be done within simulated environment, rarely done)
-
+Simulation of animal movement to evaluate monitoring methodology technology has been completed before \citep{ivan2013using, rees2011testing} in order to access the 
 
 %We develop gREM and tested it and come up with specific recommedations for its use (providing code for implementation). we controlled for different animal movement by testing the robustness of gREM with different movement model (examples).
 
