--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,103 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-06-23 13:16:10 +0100 
+%% Created for Elizabeth Moorcroft at 2014-06-24 16:41:50 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{jakobsen2012convergent,
+	Author = {Jakobsen, Lasse and Ratcliffe, John M and Surlykke, Annemarie},
+	Date-Added = {2014-06-24 13:45:59 +0000},
+	Date-Modified = {2014-06-24 13:45:59 +0000},
+	Journal = {Nature},
+	Publisher = {Nature Publishing Group},
+	Title = {Convergent acoustic field of view in echolocating bats},
+	Year = {2012}}
+
+@article{kessel2014review,
+	Author = {Kessel, ST and Cooke, SJ and Heupel, MR and Hussey, NE and Simpfendorfer, CA and Vagle, S and Fisk, AT},
+	Date-Added = {2014-06-24 13:20:30 +0000},
+	Date-Modified = {2014-06-24 13:20:30 +0000},
+	Journal = {Reviews in Fish Biology and Fisheries},
+	Number = {1},
+	Pages = {199--218},
+	Publisher = {Springer},
+	Title = {A review of detection range testing in aquatic passive acoustic telemetry studies},
+	Volume = {24},
+	Year = {2014}}
+
+@article{rees2011testing,
+	Author = {Rees, Samuel G and Goodenough, Anne E and Hart, Adam G and Stafford, Richard},
+	Date-Added = {2014-06-24 11:43:58 +0000},
+	Date-Modified = {2014-06-24 11:43:58 +0000},
+	Journal = {Ecological Modelling},
+	Number = {17},
+	Pages = {3291--3294},
+	Publisher = {Elsevier},
+	Title = {Testing the effectiveness of capture mark recapture population estimation techniques using a computer simulation with known population size},
+	Volume = {222},
+	Year = {2011}}
+
+@article{ivan2013using,
+	Author = {Ivan, Jacob S and White, Gary C and Shenk, Tanya M},
+	Date-Added = {2014-06-24 09:38:43 +0000},
+	Date-Modified = {2014-06-24 09:38:43 +0000},
+	Journal = {Ecology},
+	Number = {4},
+	Pages = {817--826},
+	Publisher = {Eco Soc America},
+	Title = {Using simulation to compare methods for estimating density from capture-recapture data},
+	Volume = {94},
+	Year = {2013}}
+
+@article{depraetere2012monitoring,
+	Author = {Depraetere, Marion and Pavoine, Sandrine and Jiguet, Fr{\'e}deric and Gasc, Amandine and Duvail, St{\'e}phanie and Sueur, J{\'e}r{\^o}me},
+	Date-Added = {2014-06-23 15:34:19 +0000},
+	Date-Modified = {2014-06-23 15:34:19 +0000},
+	Journal = {Ecological Indicators},
+	Number = {1},
+	Pages = {46--54},
+	Publisher = {Elsevier},
+	Title = {Monitoring animal diversity using acoustic indices: implementation in a temperate woodland},
+	Volume = {13},
+	Year = {2012}}
+
+@article{marcoux2011local,
+	Author = {Marcoux, Marianne and Auger-M{\'e}th{\'e}, Marie and Chmelnitsky, Elly G and Ferguson, Steven H and Humphries, Murray M},
+	Date-Added = {2014-06-23 15:11:18 +0000},
+	Date-Modified = {2014-06-23 15:11:18 +0000},
+	Journal = {Arctic},
+	Pages = {307--316},
+	Publisher = {JSTOR},
+	Title = {Local passive acoustic monitoring of narwhal presence in the Canadian Arctic: a pilot project},
+	Year = {2011}}
+
+@article{straight2014passive,
+	Author = {Straight, Carrie A and Freeman, Byron J and Freeman, Mary C},
+	Date-Added = {2014-06-23 12:25:52 +0000},
+	Date-Modified = {2014-06-23 12:25:52 +0000},
+	Journal = {Transactions of the American Fisheries Society},
+	Number = {3},
+	Pages = {595--605},
+	Publisher = {Taylor \& Francis},
+	Title = {Passive Acoustic Monitoring to Detect Spawning in Large-Bodied Catostomids},
+	Volume = {143},
+	Year = {2014}}
+
+@article{mckown2012wireless,
+	Author = {McKown, Matthew W and Lukac, Martin and Borker, Abraham and Tershy, Bernie and Croll, Don},
+	Date-Added = {2014-06-23 12:18:36 +0000},
+	Date-Modified = {2014-06-23 12:18:36 +0000},
+	Journal = {The Journal of the Acoustical Society of America},
+	Number = {3},
+	Pages = {2036--2036},
+	Publisher = {Acoustical Society of America},
+	Title = {A wireless acoustic sensor network for monitoring wildlife in remote locations},
+	Volume = {132},
+	Year = {2012}}
 
 @article{blumstein2011acoustic,
 	Author = {Blumstein, Daniel T and Mennill, Daniel J and Clemins, Patrick and Girod, Lewis and Yao, Kung and Patricelli, Gail and Deppe, Jill L and Krakauer, Alan H and Clark, Christopher and Cortopassi, Kathryn A and others},
