--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,47 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-06-25 16:40:20 +0100 
+%% Created for Elizabeth Moorcroft at 2014-06-30 16:46:27 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{brusa2014increasing,
+	Author = {Brusa, Anthony and Bunker, Daniel E},
+	Date-Added = {2014-06-30 15:26:09 +0000},
+	Date-Modified = {2014-06-30 15:26:09 +0000},
+	Journal = {Agricultural and Forest Meteorology},
+	Pages = {102--107},
+	Publisher = {Elsevier},
+	Title = {Increasing the precision of canopy closure estimates from hemispherical photography: Blue channel analysis and under-exposure},
+	Volume = {195},
+	Year = {2014}}
+
+@article{chandler2011inference,
+	Author = {Chandler, Richard B and Royle, J Andrew and King, David I},
+	Date-Added = {2014-06-30 09:04:46 +0000},
+	Date-Modified = {2014-06-30 09:04:46 +0000},
+	Journal = {Ecology},
+	Number = {7},
+	Pages = {1429--1435},
+	Publisher = {Eco Soc America},
+	Title = {Inference about density and temporary emigration in unmarked populations},
+	Volume = {92},
+	Year = {2011}}
+
+@article{dail2011models,
+	Author = {Dail, D and Madsen, L},
+	Date-Added = {2014-06-30 08:58:56 +0000},
+	Date-Modified = {2014-06-30 08:58:56 +0000},
+	Journal = {Biometrics},
+	Number = {2},
+	Pages = {577--587},
+	Publisher = {Wiley Online Library},
+	Title = {Models for estimating abundance from repeated counts of an open metapopulation},
+	Volume = {67},
+	Year = {2011}}
 
 @article{jakobsen2012convergent,
 	Author = {Jakobsen, Lasse and Ratcliffe, John M and Surlykke, Annemarie},
