--- a/Introduction - rewrite.tex
+++ b/Introduction - rewrite.tex
@@ -10,26 +10,24 @@ However, the problem of converting sampled count data to estimates of density re
 
 
 %Current methods are often inadequate because of specific data requirements (marked indivudals)
-Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}.
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}.
 
 
 %REM developed for camera trap data, doesnt need this assumptions 
-Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with camera traps. The REM is a modified version of the gas model where the sensors have an angle of detection (the angle within which an animal can be detected) up to $\pi$ radians \citep{rowcliffe2008estimating}. 
+Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with camera traps. The REM is a modified version of the gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$ radians \citep{rowcliffe2008estimating}. 
 
 %but has limitations
-This angle limitation may not apply to acoustic detectors \citep{adams2012you}, or all types of camera traps. Furthermore, animal calls may be directional, and the existing REM designed for camera trap data does not handle this case.
-
 %Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-Fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM. 
+This angluar limitation may not applicable to acoustic detectors \citep{adams2012you}, or all types of camera traps. Fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM.  Furthermore, animal calls may be directional and the existing REM, designed for camera trap data, does not handle this case.
 
 %acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
-There has been a sharp rise in interest around passive acoustic detectors in recent years, with an increase in publications of at least 500\% in the decade between 2000 and 2010 \citep{kessel2014review}. However there is not uniformity in the data collected, with microphones having a wide range of detection angles and different species of animals will display different directionality in their calls. There will even be different widths of call from the same animal depending on that calls purpose \citep{jakobsen2012convergent}.
+There has been a sharp rise in interest around passive acoustic detectors in recent years, with at least 500\% increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. However there is not uniformity in the data collected, with microphones having a wide range of detection angles and different species of animals will display different directionality in their calls. There will even be different widths of call from the same animal depending on that calls purpose \citep{jakobsen2012convergent}.
 
 %Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
-Acoustic monitoring is being developed for study the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, as well as the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}
+Acoustic monitoring is being developed for study the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, as well as the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}.
 
 %Another limitation to using these sensors is lack of guidelines on how survey effort impacts the accuracy and precision of estimates (guidelines would be useful. practically can only be done within simulated environment, rarely done)
-Simulation of animal movement to evaluate monitoring methodology technology has been completed before \citep{ivan2013using, rees2011testing} in order to access the 
+A further limitation of the current methods is that they maybe inaccurate and lack precision if they are applied to poorly collected remote sensor data \citep{rees2011testing}, for this reason a robust set of guidelines is necessary so that this does not occur. Different monitoring methodologies have been tested before with simulations in order to access the accuracy of these techniques \citep{ivan2013using, rees2011testing, borchers2008spatially}. 
 
 %We develop gREM and tested it and come up with specific recommedations for its use (providing code for implementation). we controlled for different animal movement by testing the robustness of gREM with different movement model (examples).
 In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic signal a signal width). 
