--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-06-30 16:46:27 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-01 15:48:19 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{borchers2008spatially,
+	Author = {Borchers, David L and Efford, MG},
+	Date-Added = {2014-07-01 14:00:48 +0000},
+	Date-Modified = {2014-07-01 14:00:48 +0000},
+	Journal = {Biometrics},
+	Number = {2},
+	Pages = {377--385},
+	Publisher = {Wiley Online Library},
+	Title = {Spatially explicit maximum likelihood methods for capture--recapture studies},
+	Volume = {64},
+	Year = {2008}}
 
 @article{brusa2014increasing,
 	Author = {Brusa, Anthony and Bunker, Daniel E},
