more changes to intro

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-07-01 15:48:19 +0100 
+%% Created for Elizabeth Moorcroft at 2014-07-02 16:17:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{walters2012continental,
+	Author = {Walters, Charlotte L and Freeman, Robin and Collen, Alanna and Dietz, Christian and Brock Fenton, M and Jones, Gareth and Obrist, Martin K and Puechmaille, S{\'e}bastien J and Sattler, Thomas and Siemers, Bj{\"o}rn M and others},
+	Date-Added = {2014-07-02 12:57:48 +0000},
+	Date-Modified = {2014-07-02 12:57:48 +0000},
+	Journal = {Journal of Applied Ecology},
+	Number = {5},
+	Pages = {1064--1074},
+	Publisher = {Wiley Online Library},
+	Title = {A continental-scale tool for acoustic identification of European bats},
+	Volume = {49},
+	Year = {2012}}
+
+@article{solymos2013calibrating,
+	Author = {S{\'o}lymos, P{\'e}ter and Matsuoka, Steven M and Bayne, Erin M and Lele, Subhash R and Fontaine, Patricia and Cumming, Steve G and Stralberg, Diana and Schmiegelow, Fiona KA and Song, Samantha J},
+	Date-Added = {2014-07-02 09:51:10 +0000},
+	Date-Modified = {2014-07-02 09:51:10 +0000},
+	Journal = {Methods in Ecology and Evolution},
+	Number = {11},
+	Pages = {1047--1058},
+	Publisher = {Wiley Online Library},
+	Title = {Calibrating indices of avian density from non-standardized survey data: making the most of a messy situation},
+	Volume = {4},
+	Year = {2013}}
 
 @article{borchers2008spatially,
 	Author = {Borchers, David L and Efford, MG},
