--- a/Introduction - rewrite.tex
+++ b/Introduction - rewrite.tex
@@ -1,35 +1,21 @@
 %Wildlife montoring important (declines in populations, global declines)
-Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}.
-
 %Wildlife monitoring tech growing in sophication and widespread (remote sensors visual and acoustic)
-Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,jones2011indicator} are becoming increasingly used to survey animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. 
-
-
 %Difficult to estimate abundance and densities (needed for monitoring)
-However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{dail2011models, chandler2011inference}.
+Animal population size is one of the fundamental measures needed in ecology and conservation. The absolute size of a population has important implications for a range of issues such as genetic diversity \citep{o1985genetic, fischer2000genetic, willi2005threefold}, sensitivity to stochastic fluctuations \citep{richter1972extinction,wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Sensor technology, such as camera traps \citep{rowcliffe2008surveys,ahumada2011community} and acoustic detectors \citep{ofarrel1999comparison,mellinger2007fixed,walters2012continental} are becoming increasingly used to survey animal populations \citep{rowcliffe2008surveys, kessel2014review}, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}, allowing for surveys over large areas and long periods. However, the problem of converting sampled count data to estimates of density remains as efforts must be made to account for detectability of the animals \citep{dail2011models, chandler2011inference, solymos2013calibrating}.
 
 
 %Current methods are often inadequate because of specific data requirements (marked indivudals)
-Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}.
-
-
 %REM developed for camera trap data, doesnt need this assumptions 
-Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with camera traps. The REM is a modified version of the gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$ radians \citep{rowcliffe2008estimating}. 
-
 %but has limitations
 %Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-This angluar limitation may not applicable to acoustic detectors \citep{adams2012you}, or all types of camera traps. Fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM.  Furthermore, animal calls may be directional and the existing REM, designed for camera trap data, does not handle this case.
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with some camera traps. The REM is a modified version of the gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$/2 radians and an animal is equally detectable given any angle of approach \citep{rowcliffe2008estimating}. This angular requirement of the sensor in REM may not cover acoustic detectors \citep{adams2012you}, or some types of camera traps. For example, fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM. Furthermore, if a species can not be identified from all possible angles, or an animal has a directional call, the existing REM would not be suitable.
 
 %acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
-There has been a sharp rise in interest around passive acoustic detectors in recent years, with at least 500\% increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. However there is not uniformity in the data collected, with microphones having a wide range of detection angles and different species of animals will display different directionality in their calls. There will even be different widths of call from the same animal depending on that calls purpose \citep{jakobsen2012convergent}.
-
 %Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
-Acoustic monitoring is being developed for study the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, as well as the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}.
+There has been a sharp rise in interest around passive acoustic detectors in recent years, with a 10 fold increase in publications in the decade between 2000 and 2010 \citep{kessel2014review}. However there is great variety in the data collected from acoustic detectors. They are designed for a range of diverse tasks and environments \citep{kessel2014review}, which will naturally lead to a wide range of sensor detection widths and detection distances. In addition to this, different species of animals will display different directionality in their calls, and they will even differ within species depending on the purpose \citep{jakobsen2012convergent}. Acoustic monitoring is being developed to study many aspects of ecology, including the interactions of animals and their environments \citep{blumstein2011acoustic, straight2014passive, marcoux2011local, rogers2013density}, the presence and relative abundances of species \citep{mckown2012wireless, marcoux2011local}, and biodiversity of an area \citep{ depraetere2012monitoring}. However there are few methods for estimation of absolute abundance of animal densities with acoustic data. 
 
 %Another limitation to using these sensors is lack of guidelines on how survey effort impacts the accuracy and precision of estimates (guidelines would be useful. practically can only be done within simulated environment, rarely done)
-A further limitation of the current methods is that they maybe inaccurate and lack precision if they are applied to poorly collected remote sensor data \citep{rees2011testing}, for this reason a robust set of guidelines is necessary so that this does not occur. Different monitoring methodologies have been tested before with simulations in order to access the accuracy of these techniques \citep{ivan2013using, rees2011testing, borchers2008spatially}. 
+A further limitation of the current methods is that they maybe inaccurate and lack precision if they are applied to poorly collected remote sensor data \citep{rees2011testing}, for this reason a robust set of guidelines is necessary. If it possible to test different monitoring methodologies with simulations in order to access the accuracy of these techniques \citep{ivan2013using, borchers2008spatially}, and provide insight into what level of sampling effort is appropriate \citep{rees2011testing}. 
 
 %We develop gREM and tested it and come up with specific recommedations for its use (providing code for implementation). we controlled for different animal movement by testing the robustness of gREM with different movement model (examples).
-In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic signal a signal width). 
-We provide an R \citep{R} script for the implementation of the gREM in Appendix S1.  
- We tested the model using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the analytical model can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the model if the assumptions about animal movement were broken, including stop-start movement and correlated and random walks.
+In this study we create a generalised REM (gREM), as an extension to the camera trap model of \citep{rowcliffe2008estimating}, to estimate absolute density from count data from acoustic detectors, or camera traps, where the sensor width can vary from 0 to $2\pi$ radians, and the acoustic signal given off from the animal can be directional (we call the width of an animals acoustic signal a signal width). We have provided an R \citep{R} script for the implementation of the gREM in Appendix S1. The gREM was tested using simulations in order to assess the validity of the models and in order to give suggestions for best practice. Specifically, we test that the gREM can accurately predict density when the assumptions of a homogeneous environment and straight-line animal movement are met. We went on to test the accuracy of the gREM if the assumptions about animal movement were broken, including stop-start movement and correlated and random walks.
