--- a/gREM Introduction 02072014 EM.tex
+++ b/gREM Introduction 02072014 EM.tex
@@ -8,7 +8,7 @@ Animal population size is one of the fundamental measures needed in ecology and 
 %REM developed for camera trap data, doesnt need this assumptions 
 %but has limitations
 %Specifically sensor widths - different environments might need more flexibility (examples) and signal directionality assumptions (examples) - method has been optimised for terrestrial large animals
-Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with some camera traps. The REM is a modified version of the gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$/2 radians and an animal is equally detectable given any angle of approach \citep{rowcliffe2008estimating}. This angular requirement of the sensor in REM may not cover acoustic detectors \citep{adams2012you}, or some types of camera traps. For example, fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM. Furthermore, if a species can not be identified from all possible angles, or an animal has a directional call, the existing REM would not be suitable.
+Methods do already exist for estimating animal density if the distance between the animal and the sensor can be estimated, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}, or if the individuals can be individually recognised, e.g. capture-mark-recapture \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. Individual recognition and distance estimation are not always possible however. The random encounter model (REM) removes the need for these assumptions but is only suitable for use with some camera traps. The REM is a modified version of a gas model where the sensors have a detection angle (the angle within which an animal can be detected) up to $\pi$/2 radians and an animal is equally detectable given any angle of approach \citep{rowcliffe2008estimating}. This angular requirement of the sensor in REM may not cover acoustic detectors \citep{adams2012you}, or some types of camera traps. For example, fisheye lenses have been developed for monitoring of the canopy \citep{brusa2014increasing}, but any count data collected with these cameras could not be inputted into the REM as they do not meet the angular assumptions. Any camera looking down on a terrestrial landscape or in a marine environment would have a circular view point, and once again this data would not be suitable for use with the REM. Furthermore, if a species can not be identified from all possible angles, or an animal has a directional call, the existing REM would not be suitable.
 
 %acoustic monitoring becoming more common method of monitoring but has additional sensor width problems (examples) and directionality of signals (examples). 
 %Currently the count data from acoustic monitoring is used for monitoring in different ways (examples). 
